# strongswan

./: configure.ac
conf/plugins/: openssl.opt
src/libcharon/plugins/ha/: ha_child.c
src/libcharon/plugins/kernel_netlink/: kernel_netlink_ipsec.c
src/libcharon/plugins/vici/: vici_config.c
src/libcharon/sa/: ike_sa.c
src/libcharon/sa/ikev2/: task_manager_v2.c
src/libcharon/sa/ikev2/tasks/: child_create.c
src/libstrongswan/: Makefile.am
src/libstrongswan/credentials/certificates/: ocsp_responder.h  ocsp_response.h  ocsp_single_response.c  ocsp_single_response.h
src/libstrongswan/plugins/esdm/: Makefile.am  esdm_plugin.c  esdm_plugin.h  esdm_rng.c  esdm_rng.h
src/libstrongswan/plugins/openssl/: openssl_plugin.c
src/libstrongswan/plugins/openxpki/: openxpki_ocsp_responder.c
src/libstrongswan/plugins/x509/: x509_ocsp_request.c  x509_ocsp_response.c  x509_ocsp_response.h
src/libstrongswan/tests/suites/: test_serial_gen.c
src/libstrongswan/utils/: chunk.c  chunk.h
src/pki/commands/: ocsp.c  pkcs7.c  print.c
src/pki/man/: pki---print.1.in
testing/: testing.conf
